--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 				<h4 class="alert-heading">Sobre o site</h4>
 				<hr>
 				<p class="mb-0">HTML5, CSS3, JavaScript e Bootstrap.</p>
-				<p class="mb-0">Desenvolvido por Felipe C.</p>
+				<p class="mb-0">Desenvolvido por Felipe C</p>
 				<a href="https://github.com/Zodh/gerencialinkssi3p12" target="_BLANK" class="alert-link">Repositório no GitHub</a>
 			  </div>
 		</footer>
