--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 				<hr>
 				<p class="mb-0">HTML5, CSS3, JavaScript e Bootstrap.</p>
 				<p class="mb-0">Desenvolvido por Felipe C</p>
-				<a href="https://github.com/Zodh/gerencialinkssi3p12" target="_BLANK" class="alert-link">Repositório no GitHub</a>
+				<a href="mailto:felipe.santos146@aluno.unip.br" target="_BLANK" class="alert-link">Entre em contato</a>
 			  </div>
 		</footer>
 
