--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<link href="_css/index.css" rel="stylesheet">
+	<link rel="icon" type="image/png" href="_img/code-slash.svg"/>
 	<script src="_js/controlePosicao.js"></script>
 
 </head>
@@ -191,7 +192,7 @@
 				<h4 class="alert-heading">Sobre o site</h4>
 				<hr>
 				<p class="mb-0">HTML5, CSS3, JavaScript e Bootstrap.</p>
-				<p class="mb-0">Desenvolvido por Felipe C</p>
+				<p class="mb-0">Desenvolvido por Felipe C.</p>
 				<a href="mailto:felipe.santos146@aluno.unip.br" target="_BLANK" class="alert-link">Entre em contato</a>
 			  </div>
 		</footer>
