--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				  </nav>
 			</div>
 
-			<div id="caixaDeLinks" class="container container-md">
+			<div id="caixaDeLinks" class="container container-lg">
 				<center>
 					<h3><span class="badge bg"><img src="_img/code-slash.svg" width="30px" height="30px"> SI3P12</span></h3>
 					<div class="card">
