Alteração em titulos, add titulos e tamanhos de caixas

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 				  </nav>
 			</div>
 
-			<div id="caixaDeLinks" class="container container-lg">
+			<div id="caixaDeLinks" class="container container-md">
 				<center>
 					<h3><span class="badge bg"><img src="_img/code-slash.svg" width="30px" height="30px"> SI3P12</span></h3>
 					<div class="card">
 						<div class="card-body">
-							<h3>Aulas de hoje</h2>
+							<h3>Aulas</h2>
 					  		<script src="_js/gerenciaLinksDoDia.js"></script>
 						</div>
 					</div>
@@ -82,7 +82,7 @@
 
 				<div id="caixaDocente" class="">
 					
-					<h3>Equipe docente</h3>
+					<h3>Docente</h3>
 
 					<table id="tabelaDocente" class="table table-sm">
 						<thead class="table-dark">
@@ -162,6 +162,8 @@
 			<hr>
 
 			<div class="container">
+
+				<h3>Cartões do Trello</h3>
 
 				<div class="d-xl-flex alert alert-light">
 					<div class="container">
