--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 			<hr>
 			
-			<div id="equipeDocente">
+			<div id="equipeDocente" class="container alert alert-light">
 
 				<div id="caixaDocente" class="">
 					
@@ -161,7 +161,7 @@
 			<br>
 			<hr>
 
-			<div class="container">
+			<div class="container alert alert-light">
 
 				<h3>Cartões do Trello</h3>
 
@@ -190,7 +190,7 @@
 		<hr>
 
 		<footer>
-			<div class="alert alert-dark" role="alert">
+			<div class="alert alert-light" role="alert">
 				<h4 class="alert-heading">Sobre o site</h4>
 				<hr>
 				<p class="mb-0">HTML5, CSS3, JavaScript e Bootstrap.</p>
