--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 							<h3>Grupos</h3>
 
-							<a href='https://discord.gg/NVkv2Uuq' target="_BLANK" class='btn btn-outline-secondary btgrupo'>Discord</a>
+							<a href='https://discord.gg/nBhAktRh68' target="_BLANK" class='btn btn-outline-secondary btgrupo'>Discord</a>
 
 							<hr>
 
