--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 				<h4 class="alert-heading">Sobre o site</h4>
 				<hr>
 				<p class="mb-0">HTML5, CSS3, JavaScript e Bootstrap.</p>
-				<p class="mb-0">Desenvolvido por Felipe C.</p>
+				<p class="mb-0">Desenvolvido por Felipe C - Repositório no <a href="https://github.com/Zodh/gerencialinkssi3p12" target="_BLANK" class="alert-link">GitHub.</a></p>
 				<a href="mailto:felipe.santos146@aluno.unip.br" target="_BLANK" class="alert-link">Entre em contato</a>
 			  </div>
 		</footer>
