alteração de links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							<hr>
 
-							<a href='https://cutt.ly/pjSNrsH' target="_BLANK" class='btn btn-outline-primary btgrupo'>Trello</a>
+							<a href='' target="_BLANK" class='btn btn-outline-primary btgrupo'>Trello (indisponível)</a>
 
 							<hr>
 
