alteração nos links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 							<hr>
 
-							<a href='https://cutt.ly/JjSNdu8' target="_BLANK" class='btn btn-outline-success btgrupo'>WhatsApp</a>
+							<a href='' target="_BLANK" class='btn btn-outline-success btgrupo'>WhatsApp (indisponível)</a>
 
 						</div>
 
