Alteração título e remoção de código php

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div id="caixaDeLinks" class="container container-md">
 				<center>
-					<h3><span class="badge bg"><img src="_img/code-slash.svg" width="30px" height="30px"> <?php echo $nome; ?></span></h3>
+					<h3><span class="badge bg"><img alt="Code slash" src="_img/code-slash.svg" width="30px" height="30px"> SI3P12 2021</span></h3>
 					<div class="card">
 						<div class="card-body">
 							<h3>Aulas</h2>
