remoção de imagem, add links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div id="caixaDeLinks" class="container container-md">
 				<center>
-					<h3><span class="badge bg"><img alt="Code slash" src="_img/code-slash.svg" width="30px" height="30px"> SI3P12 2021</span></h3>
+					<h3><span class="badge bg">SI3P12 2021</span></h3>
 					<div class="card">
 						<div class="card-body">
 							<h3>Aulas</h2>
@@ -58,11 +58,11 @@
 
 							<hr>
 
-							<a href='' target="_BLANK" class='btn btn-outline-primary btgrupo'>Trello (indisponível)</a>
+							<a href='https://cutt.ly/pjSNrsH' target="_BLANK" class='btn btn-outline-primary btgrupo'>Trello</a>
 
 							<hr>
 
-							<a href='' target="_BLANK" class='btn btn-outline-success btgrupo'>WhatsApp (indisponível)</a>
+							<a href='https://cutt.ly/JjSNdu8' target="_BLANK" class='btn btn-outline-success btgrupo'>WhatsApp</a>
 
 						</div>
 
