add prof estat prob

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 
 							<tr>
 								<td>Professor</td>
-								<td>-</td>
+								<td>Pedro Luiz</td>
 								<td class="materiaDocente">N282 - Estatística e Probabilidade</td>
-								<td>-</td>
+								<td><a class="link-secondary" href="mailto:vinicius.pereira@docente.unip.br">pedro.serra@docente.unip.br</a></td>
 							</tr>
 
 						</tbody>
