alt table & caixa links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 
 			<div id="caixaDeLinks" class="container container-md">
-				<center>
+
 					<h3><span class="badge bg">SI3P12 2021</span></h3>
 					<div class="card">
 						<div class="card-body">
@@ -67,14 +67,8 @@
 						</div>
 
 					</div>
-				</center>
 
 			</div>
-
-			<!-- TODO: botão que revela e esconde a agenda da turma. -->
-			<!-- <hr> <div class="content">
-				<iframe class="alert-secondary" src="https://calendar.google.com/calendar/embed?height=400&amp;wkst=2&amp;bgcolor=%23b3b3b3&amp;ctz=America%2FSao_Paulo&amp;src=dGZiOXNtcmVybmNrMzRoZzhtczlvdGdhajhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23616161&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=MONTH" style="border:solid 1px #777" width="600" height="400" frameborder="0" scrolling="no"></iframe>
-			</div>-->
 
 			<hr>
 			
@@ -82,9 +76,8 @@
 
 				<div id="caixaDocente" class="">
 					
-					<h3>Docente</h3>
-
 					<table id="tabelaDocente" class="table table-sm">
+						<th id="titulo-docente"><h3>Docente</h3></th>
 						<thead class="table-dark">
 						  <tr>
 							  <td>Função</td>
