alt caixa docente

--- a/index.html
+++ b/index.html
@@ -75,16 +75,18 @@
 			<div id="equipeDocente" class="container alert alert-light">
 
 				<div id="caixaDocente" class="">
+
+					<h3>Docente</h3>
 					
 					<table id="tabelaDocente" class="table table-sm">
-						<th id="titulo-docente"><h3>Docente</h3></th>
+						
 						<thead class="table-dark">
-						  <tr>
-							  <td>Função</td>
-							  <td>Nome</td>
-							  <td>Disciplina</td>
-							  <td>Contato</td>
-						  </tr>
+						  	<tr>
+							  	<td>Função</td>
+							  	<td>Nome</td>
+							  	<td>Disciplina</td>
+							  	<td>Contato</td>
+						  	</tr>
 						</thead>
 						<tbody>
 
