--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
 							<h3>Grupos</h3>
 
-							<a href='https://discord.gg/nBhAktRh68' target="_BLANK" class='btn btn-outline-secondary btgrupo'>Discord</a>
+							<a href='https://discord.gg/nBhAktRh68' class='btn btn-outline-secondary btgrupo'>Discord</a>
 
 							<hr>
 
-							<a href='https://cutt.ly/pjSNrsH' target="_BLANK" class='btn btn-outline-primary btgrupo'>Trello</a>
+							<a href='https://cutt.ly/pjSNrsH' class='btn btn-outline-primary btgrupo'>Trello</a>
 
 							<hr>
 
-							<a href='https://cutt.ly/JjSNdu8' target="_BLANK" class='btn btn-outline-success btgrupo'>WhatsApp</a>
+							<a href='https://cutt.ly/JjSNdu8' class='btn btn-outline-success btgrupo'>WhatsApp</a>
 
 						</div>
 
@@ -136,14 +136,14 @@
 								<td>Professor</td>
 								<td>Luiz Roberto</td>
 								<td class="materiaDocente">N277 - Paradigmas de Linguagens</td>
-								<td>luiz.forcan@docente.unip.br</td>
+								<td><a class="link-secondary" href="luiz.forcan@docente.unip.br">luiz.forcan@docente.unip.br</a></td>
 							</tr>
 
 							<tr>
 								<td>Professor</td>
 								<td>Pedro Luiz</td>
 								<td class="materiaDocente">N282 - Estatística e Probabilidade</td>
-								<td><a class="link-secondary" href="mailto:vinicius.pereira@docente.unip.br">pedro.serra@docente.unip.br</a></td>
+								<td><a class="link-secondary" href="pedro.serra@docente.unip.br">pedro.serra@docente.unip.br</a></td>
 							</tr>
 
 						</tbody>
