--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
 								<td>Professor</td>
 								<td>Luiz Roberto</td>
 								<td class="materiaDocente">N277 - Paradigmas de Linguagens</td>
-								<td><a class="link-secondary" href="luiz.forcan@docente.unip.br">luiz.forcan@docente.unip.br</a></td>
+								<td><a class="link-secondary" href="mailto:luiz.forcan@docente.unip.br">luiz.forcan@docente.unip.br</a></td>
 							</tr>
 
 							<tr>
 								<td>Professor</td>
 								<td>Pedro Luiz</td>
 								<td class="materiaDocente">N282 - Estatística e Probabilidade</td>
-								<td><a class="link-secondary" href="pedro.serra@docente.unip.br">pedro.serra@docente.unip.br</a></td>
+								<td><a class="link-secondary" href="mailto:pedro.serra@docente.unip.br">pedro.serra@docente.unip.br</a></td>
 							</tr>
 
 						</tbody>
