--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
 							<tr>
 								<td>Professor</td>
-								<td>-</td>
+								<td>Elio Filho</td>
 								<td class="materiaDocente">78B7 - Atividades Práticas Supervisionadas</td>
-								<td>-</td>
+								<td><a class="link-secondary" href="mailto:elio.filho@docente.unip.br">elio.filho@docente.unip.br</a></td>
 							</tr>
 
 							<tr>
@@ -123,6 +123,13 @@
 								<td>Vinicius Novaes</td>
 								<td class="materiaDocente">J12B - Ling. Prog. Orient. a Objetos.</td>
 								<td><a class="link-secondary" href="mailto:vinicius.pereira@docente.unip.br">vinicius.pereira@docente.unip.br</a></td>
+							</tr>
+
+							<tr>
+								<td>Professor</td>
+								<td>Giovane Morais</td>
+								<td class="materiaDocente">J12B - Ling. Prog. Orient. a Objetos.</td>
+								<td><a class="link-secondary" href="mailto:giovane.morais@docente.unip.br">giovane.morais@docente.unip.br</a></td>
 							</tr>
 
 							<tr>
