--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 		<div id="conteudo" class="container">
 			
-			<div class="alert alert-light sticky-top" role="alert">
-				<nav class="navbar navbar-expand-sm navbar-light bg-light">
-					<div class="container">
+			<div class="alert alert-dark sticky-top" role="alert">
+				<nav class="navbar navbar-expand-sm navbar-dark">
+					<div class="container alert-dark">
 						<h5 id="tituloMenu">Gerenciador de Informações</h5>
 					  	<div class="navbar" id="navbarText">
 							<ul class="navbar-nav">
@@ -40,7 +40,7 @@
 
 					<h3><span class="badge bg">SI3P12 2021</span></h3>
 					<div class="card">
-						<div class="card-body">
+						<div class="card-body alert-dark">
 							<h3>Aulas</h2>
 					  		<script src="_js/gerenciaLinksDoDia.js"></script>
 						</div>
@@ -50,7 +50,7 @@
 
 					<div class="card">
 
-						<div class="card-body">
+						<div class="card-body alert-dark">
 
 							<h3>Grupos</h3>
 
@@ -72,7 +72,7 @@
 
 			<hr>
 			
-			<div id="equipeDocente" class="container alert alert-light">
+			<div id="equipeDocente" class="container alert alert-dark">
 
 				<div id="caixaDocente" class="">
 
@@ -163,11 +163,11 @@
 			<br>
 			<hr>
 
-			<div class="container alert alert-light">
+			<div class="container alert alert-dark">
 
 				<h3>Cartões do Trello</h3>
 
-				<div class="d-xl-flex alert alert-light">
+				<div class="d-xl-flex alert alert-dark">
 					<div class="container">
 						<h5>AVA</h5>
 						<blockquote class="trello-card"><a href="https://trello.com/c/1kmpptNR/11-ava">AVA</a></blockquote><script src="https://p.trellocdn.com/embed.min.js"></script>
@@ -192,7 +192,7 @@
 		<hr>
 
 		<footer>
-			<div class="alert alert-light" role="alert">
+			<div class="alert alert-dark" role="alert">
 				<h4 class="alert-heading">Sobre o site</h4>
 				<hr>
 				<p class="mb-0">HTML5, CSS3, JavaScript e Bootstrap.</p>
